[Greeter] Ignore unwritable configuration files

When opening a non-writable config file, a kdialog process is spawned and the application waits for it to quit.
However, since in case of the lock screen, the input and everything is already blocked, the user cannot dismiss
the warning generated by the greeter, effectively locking the user out.

BUG: 403255

Differential Revision: https://phabricator.kde.org/D18291